--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@
 }
 
 @theme {
-  --color-avocado: oklch(0.8 59 10);
+  --color-background: oklch(0.89 0.0187 39.39);
+  --color-foreground: oklch(0.14 0 0);
+  --color-primary: oklch(0.79 0.0457 8.371887286868281);
+  --color-primary-foreground: oklch(0.2 0 0);
+  --color-input: oklch(0.92 0 0);
 
   --text-base: clamp(1.125rem, 1.038rem + 0.4348vw, 1.375rem);
 
@@ -14,6 +18,7 @@
 
 :root {
   /* font-size: var(--text-base); */
+  color-scheme: light;
 }
 
 @layer base {
@@ -42,6 +47,7 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+
     --radius: 0.5rem;
 
     color-scheme: light;
@@ -110,7 +116,7 @@
   #root {
     /* @apply flex flex-col; */
   }
-}
+} */
 
 .every-4th-transparent:nth-child(4) {
   color: transparent;
@@ -163,4 +169,10 @@
 }
 @utility content-xl {
   grid-column: content-xl;
+}
+
+
+/* timelinecard */
+@utility transition-foo {
+  transition: all .2s ease-in .22s;
 }
