--- a/src/index.css
+++ b/src/index.css
@@ -1,135 +1,105 @@
 @import 'tailwindcss';
+@import 'tw-animate-css';
 
-@utility border-border {
-  border: 1px solid black;
+@custom-variant dark (&:is(.dark *));
+
+@theme inline {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+
+  --prose: 40ch;
+  --prose-xl: 65ch;
+
+  --gap: 1rem;
+  --breakout-size: minmax(0, 7rem);
+  --content-size-xl: minmax(0, calc(var(--prose-xl) - var(--prose)));
+  --content-size: min(var(--prose), calc(100% - var(--gap) * 2));
 }
 
-@theme {
-  --color-background: oklch(0.89 0.0187 39.39);
-  --color-foreground: oklch(0.14 0 0);
-  --color-primary: oklch(0.79 0.0457 8.371887286868281);
-  --color-primary-foreground: oklch(0.2 0 0);
-  --color-input: oklch(0.92 0 0);
-
-  --text-base: clamp(1.125rem, 1.038rem + 0.4348vw, 1.375rem);
-
-  /* --color-mint-500: oklch(0.99 1 1); */
-}
-
-:root {
-  /* font-size: var(--text-base); */
-  color-scheme: light;
+.dark {
+  --background: oklch(0.141 0.005 285.823);
+  --foreground: oklch(0.985 0 0);
+  --card: oklch(0.21 0.006 285.885);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.21 0.006 285.885);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.92 0.004 286.32);
+  --primary-foreground: oklch(0.21 0.006 285.885);
+  --secondary: oklch(0.274 0.006 286.033);
+  --secondary-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.274 0.006 286.033);
+  --muted-foreground: oklch(0.705 0.015 286.067);
+  --accent: oklch(0.274 0.006 286.033);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.552 0.016 285.938);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.21 0.006 285.885);
+  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.274 0.006 286.033);
+  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.552 0.016 285.938);
 }
 
 @layer base {
-  :root {
-    --background: 15 29% 86%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 72.74 90.6% 64.12%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: currentColor;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-
-    --radius: 0.5rem;
-
-    color-scheme: light;
-
-    --prose: 40ch;
-    --prose-xl: 65ch;
-
-    /* translate: max(calc(50vw - 40ch / 2 + 3rem), 5ch) 0; */
-
-    --fs--3: clamp(0.651rem, 0.6326rem + 0.0921vw, 0.704rem);
-    --fs--2: clamp(0.7813rem, 0.7469rem + 0.1717vw, 0.88rem);
-    --fs--1: clamp(0.9375rem, 0.881rem + 0.2826vw, 1.1rem);
-    --fs-0: clamp(1.125rem, 1.038rem + 0.4348vw, 1.375rem);
-    --fs-1: clamp(1.35rem, 1.2217rem + 0.6413vw, 1.7188rem);
-    --fs-2: clamp(1.62rem, 1.4362rem + 0.919vw, 2.1484rem);
-    --fs-3: clamp(1.944rem, 1.6861rem + 1.2896vw, 2.6855rem);
-    --fs-4: clamp(2.3328rem, 1.9766rem + 1.7811vw, 3.3569rem);
-    --fs-5: clamp(2.7994rem, 2.3135rem + 2.4292vw, 4.1962rem);
-
-    line-height: noramal;
-  }
-
-  /* TODO */
-  /* @media (prefers-color-scheme: dark) {
-    :root {
-      --background: 0 0% 0%;
-      --foreground: 0 0% 98%;
-      --card: 0 0% 3.9%;
-      --card-foreground: 0 0% 98%;
-      --popover: 0 0% 3.9%;
-      --popover-foreground: 0 0% 98%;
-      --primary: 0 0% 98%;
-      --primary-foreground: 0 0% 9%;
-      --secondary: 0 0% 14.9%;
-      --secondary-foreground: 0 0% 98%;
-      --muted: 0 0% 14.9%;
-      --muted-foreground: 0 0% 63.9%;
-      --accent: 0 0% 14.9%;
-      --accent-foreground: 0 0% 98%;
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 0 0% 98%;
-      --border: currentColor;
-      --input: 0 0% 14.9%;
-      --ring: 0 0% 83.1%;
-      --chart-1: 220 70% 50%;
-      --chart-2: 160 60% 45%;
-      --chart-3: 30 80% 55%;
-      --chart-4: 280 65% 60%;
-      --chart-5: 340 75% 55%;
-    }
-  } */
-
-  html,
-  :host {
-    /* @apply leading-none font-mono; */
-  }
-
   * {
-    /* @apply border-border; */
+    @apply outline-ring/50;
   }
-
   body {
-    /* @apply text-base bg-background text-foreground min-h-dvh; */
+    @apply bg-background text-foreground text-base min-h-dvh;
   }
-
-  #root {
-    /* @apply flex flex-col; */
-  }
-} */
-
-.every-4th-transparent:nth-child(4) {
-  color: transparent;
 }
 
 @utility stripes-gradient {
- background: repeating-linear-gradient(
-      to bottom,
-      #039BE5 0px,
-      #039BE5 20px,
-      #90CAF9 20px,
-      #90CAF9 40px
-    );
+  background: repeating-linear-gradient(
+    to bottom,
+    #039be5 0px,
+    #039be5 20px,
+    #90caf9 20px,
+    #90caf9 40px
+  );
 }
 
 @utility highlighter {
@@ -137,12 +107,6 @@
 }
 
 @utility content-grid {
-  --gap: 1rem;
-
-  --breakout-size: minmax(0, 7rem);
-  --content-size-xl: minmax(0, calc(var(--prose-xl) - var(--prose)));
-  --content-size: min(var(--prose), calc(100% - var(--gap) * 2));
-
   display: grid;
   grid-template-columns:
     [full-bleed-start] 1fr [without-gap-start] var(--gap) [breakout-start] var(
@@ -171,8 +135,51 @@
   grid-column: content-xl;
 }
 
-
 /* timelinecard */
 @utility transition-foo {
-  transition: all .3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+:root {
+  --radius: 0.625rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.141 0.005 285.823);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.141 0.005 285.823);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.141 0.005 285.823);
+  --primary: oklch(0.21 0.006 285.885);
+  --primary-foreground: oklch(0.985 0 0);
+  --secondary: oklch(0.967 0.001 286.375);
+  --secondary-foreground: oklch(0.21 0.006 285.885);
+  --muted: oklch(0.967 0.001 286.375);
+  --muted-foreground: oklch(0.552 0.016 285.938);
+  --accent: oklch(0.967 0.001 286.375);
+  --accent-foreground: oklch(0.21 0.006 285.885);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.92 0.004 286.32);
+  --input: oklch(0.92 0.004 286.32);
+  --ring: oklch(0.705 0.015 286.067);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(0.141 0.005 285.823);
+  --sidebar-primary: oklch(0.21 0.006 285.885);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.967 0.001 286.375);
+  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
+  --sidebar-border: oklch(0.92 0.004 286.32);
+  --sidebar-ring: oklch(0.705 0.015 286.067);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
