--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-blurable: oklch(0.97 0 0 / 0.55);
 
   --prose: 40ch;
   --prose-xl: 65ch;
@@ -85,16 +86,6 @@
   --sidebar-ring: oklch(0.552 0.016 285.938);
 }
 
-@utility stripes-gradient {
-  background: repeating-linear-gradient(
-    to bottom,
-    #039be5 0px,
-    #039be5 20px,
-    #90caf9 20px,
-    #90caf9 40px
-  );
-}
-
 @utility highlighter {
   background: linear-gradient(180deg, transparent 70%, hsl(var(--accent)) 60%);
 }
@@ -132,13 +123,6 @@
 @utility transition-foo {
   transition: all 0.12s ease-in;
 }
-
-/* @layer components {
-  .aim {
-    anchor-name: --aim;
-    color: lime;
-  }
-} */
 
 :root {
   --radius: 0.625rem;
