--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@font-face {
+  font-family: monofur;
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("/fonts/monof55.ttf");
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -12,7 +20,7 @@
   --radius-xl: calc(var(--radius) + 4px);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --color-card: var(--card);
+  --color-card: color-mix(in hsl, var(--card), transparent 50%);
   --color-card-foreground: var(--card-foreground);
   --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
@@ -55,7 +63,7 @@
 .dark {
   --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.21 0.006 285.885);
+  --card: coral;
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.21 0.006 285.885);
   --popover-foreground: oklch(0.985 0 0);
@@ -129,7 +137,7 @@
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
 
-  --card: oklch(0.6962 0.1955 32.32 / 49.02%);
+  --card: coral;
   --card-foreground: oklch(0.141 0.005 285.823);
 
   --stands-out: oklch(0.95 0.19 104.55);
@@ -161,6 +169,10 @@
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
+
+  /* --font-mono: monofur, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --text-base: 1.1rem;
+  --text-sm: 1rem; */
 }
 
 @layer base {
