--- a/src/index.css
+++ b/src/index.css
@@ -141,23 +141,24 @@
 :root {
   --radius: 0.725rem;
   --background: oklch(1 0 0);
-  --foreground: oklch(25.7% 0.01291 61.956);
+  --foreground: oklch(26.448% 0.00003 271.152 / 0.916);
 
   --accent: rgba(255, 204, 176, 0.803);
   --accent-strong: rgba(248, 134, 99, 0.874);
   --accent-secnd: rgb(196, 142, 214);
   --accent-muted: rgb(173, 148, 138);
   --card-foreground: oklch(27.275% 0.0205 43.695);
-  --stands-out: oklch(0.95 0.19 104.55);
+  --stands-out: oklch(94.352% 0.12633 100.698);
 
-  --destructive: oklch(61.876% 0.12376 18.106 / 0.691);
+  --destructive: oklch(66.214% 0.14886 18.922 / 0.691);
 
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.141 0.005 285.823);
   --primary: oklch(26.858% 0.01044 60.943);
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.967 0.001 286.375);
+  --secondary: oklch(78.594% 0.08163 133.002 / 0.721);
   --secondary-foreground: oklch(0.21 0.006 285.885);
+
   --muted: oklch(96.792% 0.00104 11.366);
   --muted-foreground: oklch(0.24 0.03 283.78 / 0.31);
   --border: oklch(94.309% 0.00011 271.152);
