--- a/src/index.css
+++ b/src/index.css
@@ -281,8 +281,8 @@
 }
 
 @utility little-inset-box-shadow {
-  box-shadow: inset -20px 8px 100px 40px
-    color-mix(in hsl, var(--background-dark), transparent 30%);
+  box-shadow: inset 0px 10px 100px 10px
+    color-mix(in hsl, var(--foreground), transparent 30%);
 }
 
 /* @utility px-unified-safe {
