--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,8 @@
   --highlight: oklch(1 0 0);
   --foreground: oklch(26.448% 0.00003 271.152 / 0.916);
   --brand: oklch(0.66 0.15 235.85);
-  --success: oklch(0.79 0.25 150.55);
+  --success-deep: oklch(0.79 0.25 150.55);
+  --success: color-mix(in hsl, oklch(0.79 0.25 150.55) 30%, transparent);
 
   --shadow: 0 2px 2px oklch(0 0 0 / 7%);
 
@@ -103,6 +104,7 @@
   --color-foreground: var(--foreground);
   --color-brand: var(--brand);
   --color-success: var(--success);
+  --color-success-deep: var(--success-deep);
 
   --color-card: var(--accent);
   --color-accent: var(--accent);
