--- a/src/index.css
+++ b/src/index.css
@@ -286,16 +286,55 @@
 }
 
 @utility top-unified-safe {
-  top: max(
-    env(safe-area-inset-top),
-    var(--tg-safe-area-inset-top),
-    0.2rem
-  );
+  top: max(env(safe-area-inset-top), var(--tg-safe-area-inset-top), 0.2rem);
 }
 
 @utility little-inset-box-shadow {
   box-shadow: inset 0px 10px 100px 10px
     color-mix(in hsl, var(--foreground), transparent 30%);
+}
+
+@keyframes kjello {
+  from,
+  11.1%,
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  22.2% {
+    transform: skewX(-12.5deg) skewY(-12.5deg);
+  }
+
+  33.3% {
+    transform: skewX(6.25deg) skewY(6.25deg);
+  }
+
+  44.4% {
+    transform: skewX(-3.125deg) skewY(-3.125deg);
+  }
+
+  55.5% {
+    transform: skewX(1.5625deg) skewY(1.5625deg);
+  }
+
+  66.6% {
+    transform: skewX(-0.78125deg) skewY(-0.78125deg);
+  }
+
+  77.7% {
+    transform: skewX(0.390625deg) skewY(0.390625deg);
+  }
+
+  88.8% {
+    transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+  }
+}
+
+@utility jello {
+  animation-name: kjello;
+  transform-origin: center;
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
 }
 
 /* @utility px-unified-safe {
